--- a/HomeWork_2/app/src/main/res/values/strings.xml
+++ b/HomeWork_2/app/src/main/res/values/strings.xml
@@ -6,6 +6,9 @@
     <string name="time_ago">5 minutes ago</string>
     <string name="post_content">Занятия проходят по вторникам в Zoom. По некоторым лекциям предусмотрены семинары, которые проходят по четвергам.
         \nНачало занятий в 18.00, продолжительность примерно 1.5-2 часа. Об изменениях в расписании и дополнительных занятиях будем сообщать заранее здесь и в чате.</string>
+    <string name="likes_count">753</string>
+    <string name="comments_count">10</string>
+    <string name="sharing_count">17</string>
 
 
 </resources>
